[package]
name = "rusty-box"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
thiserror = "1.0.40"
dotenv = "^0.15"
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.6", features = ["multipart", "json"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "3.0.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
maybe-async = "0.2.7"
futures = "0.3.17"
# futures = { version = "0.3.17", optional = true }
# derivative = "2.2.0"


[dev-dependencies]
env_logger = { version = "0.10.0", default-features = false }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.17"

[[example]]
name = "auth_developer"
path = "examples/auth_developer.rs"

[[example]]
name = "auth_ccg"
path = "examples/auth_ccg.rs"

[[example]]
name = "users_list"
path = "examples/users_list.rs"





