[package]
authors = [
    "Barduino <barduinor@gmail.com>",
]
name = "rusty-box"
version = "0.3.0-alpha"
edition = "2021"

license = "MIT"
readme = "README.md"
description = "Box.com API wrapper"
homepage = "https://github.com/barduinor/rusty-box"
repository = "https://github.com/barduinor/rusty-box"
categories = ["api-bindings"]
keywords=["box", "box-platform","box-api"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
thiserror = "1.0.40"
dotenv = "^0.15"
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.6", features = ["multipart", "json"] }
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "3.0.0"
serde_json = "^1.0"
chrono = { version = "0.4.24", features = ["serde"] }
async-trait = "0.1.68"
url = "2.2.2"
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1.3.0"
env_logger = { version = "0.10.0", default-features = false }
tokio = { version = "1.11.0", features = ["rt-multi-thread", "macros"] }
webbrowser = "0.8.9"
tiny_http = "0.12.0"
serde_qs = "0.12.0"

[[example]]
name = "auth_developer"
path = "examples/auth_developer.rs"

[[example]]
name = "auth_ccg"
path = "examples/auth_ccg.rs"

[[example]]
name = "users_list"
path = "examples/users_list.rs"





